--- a/Sephora_recsys_Complete.ipynb
+++ b/Sephora_recsys_Complete.ipynb
@@ -2,12 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "eeec2bab",
+   "id": "73137589",
    "metadata": {},
    "source": [
-    "Goal: Build Recommender System\n",
-    "1. Collaborative Filtering Model for cold start problems\n",
-    "2. Content Based"
+    "# SKINCARE RECOMMENDER SYSTEMS (SEPHORA DATASET)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fce364d3",
+   "metadata": {},
+   "source": [
+    "-----------------------------------------------------"
    ]
   },
   {
@@ -15,6 +21,8 @@
    "id": "8df8f4af",
    "metadata": {},
    "source": [
+    "\n",
+    "\n",
     "# This is a 2-part combined jupyter notebook\n",
     "\n",
     "## Part 1: EDA, Preprocessing & Visualisation\n",
@@ -58,14 +66,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eeec2bab",
+   "metadata": {},
+   "source": [
+    "### Goal: Build Recommender System\n",
+    "1. Collaborative Filtering Model for cold start problems\n",
+    "2. Content Based Filtering for Ingredients similarity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae3e2f20",
+   "metadata": {},
+   "source": [
+    "------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "afb6dff1",
    "metadata": {},
    "source": [
-    "Before you start, kindly install these libraries if you have not:\n",
-    "    1. ntlk \n",
-    "    2. wordcloud\n",
-    "    3. Surprise\n",
-    "    4. recmetrics\n",
+    "#### Before you start, kindly install these libraries if you have not:\n",
+    "   1. ntlk \n",
+    "   2. wordcloud\n",
+    "   3. Surprise\n",
+    "   4. recmetrics\n",
     "\n",
     "(uncomment the next cell)"
    ]
@@ -1423,7 +1449,7 @@
     "- Eye Color 'No data' = 2085\n",
     "- Hair Color 'No data' = 2092\n",
     "\n",
-    "Ingredient columns list shows more interesting data: aside from 'no info' in the top frequency, there are two other values that are not ingredient, 'Visit the Shiseido boutique' & 'Visit the SEPHORA COLLECTION boutique'."
+    "Ingredient columns list shows more interesting data: aside from 'no info' in the top frequency, there are two other values that are not ingredient, 'Visit the Shiseido boutique' & 'Visit the SEPHORA COLLECTION boutique' which will be removed later."
    ]
   },
   {
@@ -7103,7 +7129,7 @@
    "id": "b974c326",
    "metadata": {},
    "source": [
-    "No results returned. Not recommended model (pun intended) when compared to SVD"
+    "No results returned. Not a recommended model (pun intended) when compared to SVD."
    ]
   },
   {
@@ -7290,16 +7316,16 @@
     "\n",
     "## Summary:\n",
     "\n",
-    "In summary I have built a recommender systems that inputs user features: Skin type, Skin tone, Eye Color, Hair color and outputs the recommmended products for that user.\n",
+    "In summary I have built a recommender systems that inputs user features: Skin Type, Skin Tone, Eye Color, Hair Color and outputs the recommmended products for that user.\n",
     "\n",
-    "The first model I ran a simple recommender that returns the highes correlated products based on the features given.\n",
+    "The first model I ran a simple recommender that returns the products based on the features correlation similarity.\n",
     "The second model I ran SVD.\n",
     "\n",
     "Evaluation for SVD is quite bad, scoring:\n",
     "1. MSE:  1.8\n",
     "2. RMSE:  1.3\n",
     "\n",
-    "If were to compare results to the first model. Definitely SVD is better choice.\n",
+    "If were to compare results to the first model. Definitely SVD is a better choice.\n",
     "\n",
     "\n",
     "## Future Works:\n",
@@ -7308,7 +7334,7 @@
     "\n",
     "I would like to continue my project for the ingredients based recommender too.\n",
     "\n",
-    "And to conclued the projects I will definitely try to deploy on a web app in the future."
+    "And to conclude the project I will definitely try to deploy on a web app in the future."
    ]
   },
   {
